# compatlib

./: README.md  pyproject.toml
src/compatlib/: __init__.py  test_class.py  test_module.py
